adjusted some css. attempt to resolve readable stream

--- a/front/src/App.css
+++ b/front/src/App.css
@@ -64,7 +64,7 @@ input[type="file"] {
   outline: none;
   border: none;
   background: none;
-
+cursor: pointer;
 }
 #download {
   padding: 100px;
@@ -73,12 +73,15 @@ input[type="file"] {
   outline: none;
   border: none;
   background: none;
+  cursor: pointer;
+}
+#download:hover{
 }
 svg{
   display: inline-block;
   vertical-align: middle;
   margin-left:auto;
-   margin-right:auto;
+  margin-right:auto;
 }
 svg path{
 fill: linear-gradient(
@@ -97,5 +100,7 @@ fill: linear-gradient(
   color: rgb(90, 0, 0, 1);
 }
 .divs{
+  display: grid;
+  place-items: center;
   margin-top: 100px;
 }
